--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<footer class="row" ng-show="todo.isShow()">
 			<input type="checkbox" id="mark-all" ng-model="todo.checkAll" ng-click="todo.toggleCheckAll()" />
 			<label for="mark-all">All done</label>
-			<button class="btn remove" ng-click="todo.removeChecked()"></i>Clear Done</button>
+			<button class="btn remove" ng-click="todo.removeChecked()"></i>Clear Checked</button>
 		</footer>
 	</div>
 </div>
